# MainThingy

./: Kconfig  README.md  TODOlist  mainThingy.h  prj.conf
collar/: CMakeLists.txt  Kconfig  nrf9160.code-workspace  prj.conf
collar/nrf52840/: CMakeLists.txt  prj.conf
collar/nrf52840/boards/arm/nyanthingy_nrf52840/: Kconfig.board  nyanthingy_nrf52840.dts  nyanthingy_nrf52840.yaml  nyanthingy_nrf52840_defconfig
collar/nrf52840/src/: main.c
collar/nrf52840/src/ble_gatt/: Kconfig  ble.c
collar/nrf52840/src/events/: peripheral_conn_event.h
collar/nrf52840/src/imu_classifier/: imu_classifier.c  imu_classifier.h
collar/nrf52840/src/uart_channel/: CMakeLists.txt  Kconfig  uart_channel.h
collar/nrf52840/src/uart_resolver/: CMakeLists.txt  uart_resolver.c  uart_resolver.h
collar/nrf52840/src/watchdog/: Kconfig  watchdog.h
collar/nrf52840_soc/: CMakeLists.txt  Kconfig  app.overlay  prj.conf
collar/nrf52840_soc/boards/arm/nyanthingy_nrf52840/: Kconfig.defconfig
collar/nrf52840_soc/src/: main.c
collar/nrf52840_soc/src/ble_gatt/: CMakeLists.txt  Kconfig  ble.c  ble.h
collar/nrf52840_soc/src/events/: CMakeLists.txt  peripheral_conn_event.c  peripheral_conn_event.h
collar/nrf52840_soc/src/imu_classifier/: CMakeLists.txt  imu_classifier.c  imu_classifier.h
collar/nrf52840_soc/src/uart_channel/: Kconfig  uart_channel.c
collar/nrf52840_soc/src/watchdog/: watchdog.c
collar/nrf9160/: CMakeLists.txt  Kconfig  TODOlist  app.overlay  overlay-watchdog.conf  prj.conf
collar/nrf9160/board/boards/arm/nyanthingy_nrf9160/: Kconfig.board  Kconfig.defconfig  nyanthingy_nrf9160.dts  nyanthingy_nrf9160.yaml  nyanthingy_nrf9160_defconfig
collar/nrf9160/src/: main.c  state_flags.h
collar/nrf9160/src/battery_monitor/: battery_monitor.c  battery_monitor.h
collar/nrf9160/src/events/: CMakeLists.txt  buzzer_state_event.c  buzzer_state_event.h  gnns_mode_state_event.c  gnns_mode_state_event.h  gnss_fix_event.c  gnss_fix_event.h  led_state_event.c  led_state_event.h
collar/nrf9160/src/modem/: CMakeLists.txt  Kconfig  lte.c  modem_config.c  modem_config.h
collar/nrf9160/src/modem/gnss/: CMakeLists.txt  gnss.c
collar/nrf9160/src/modem/gnss/assistance/: CMakeLists.txt  assistance.c  assistance.h
collar/nrf9160/src/modules/: CMakeLists.txt
collar/nrf9160/src/modules/battery_monitor/: CMakeLists.txt  battery_monitor.h
collar/nrf9160/src/modules/buzzer/: CMakeLists.txt  Kconfig  buzzer.c  buzzer.h  notes.h
collar/nrf9160/src/modules/led/: CMakeLists.txt  led.c  led.h
collar/nrf9160/src/server_exchange/: CMakeLists.txt  Kconfig  server_echange.h  server_exchange.c  server_exchange.h  server_exchange_gnss.c
collar/nrf9160/src/uart_channel/: Kconfig  uart_channel.c  uart_channel.h
collar/nrf9160/src/uart_resolver/: Kconfig  uart_resolver.c  uart_resolver.h
collar/nrf9160/src/watchdog/: CMakeLists.txt  watchdog.c
collar/src/: assistance.c  gnss.c  lte.c  main.c  mainThingy.c  modem_config.h
mobile_app/: build.gradle.kts  gradle.properties  settings.gradle.kts
server/: compose.yml
src/: assistance.c  assistance.h  gnss.c  lte.c  main.c  mainThingy.c  modem_config.h
(+190 files in other folders)
